<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="filter">Filter</string>
    <string name="sample_discount">10%</string>
    <string name="sample_price">Rp9.150</string>
    <string name="sample_seller_name">Seller Store</string>
    <string name="sample_product_name">Macbook Pro</string>
    <string name="sample_city">Jakarta</string>
    <string name="label_select_location">Pilih Lokasi</string>
    <string name="sample_location">Jakarta</string>
    <string name="action_apply">Terapkan</string>
    <string name="label_set_price">Atur Harga</string>
    <string name="label_other">Other</string>
</resources>