<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bottom_sheet"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/colorBlack" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_close_24" />

    <View
        android:id="@+id/viewFilter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@id/tvLabelFilter"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/colorGreyEight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelFilterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewFilter"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/label_select_location" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipLocation"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabelFilterLocation"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:singleSelection="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelFilterPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chipLocation"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/label_set_price" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabelFilterPrice"
        android:layout_marginTop="@dimen/dimen_8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_price"
        android:layout_below="@id/sliderPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:id="@+id/tvMinPrice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_price"
        android:layout_below="@id/sliderPrice"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:id="@+id/tvMaxPrice"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/action_apply"
        android:layout_below="@id/tvMaxPrice"
        android:textSize="@dimen/text_size_12sp"
        app:cornerRadius="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"/>

</RelativeLayout>