<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="@dimen/dimen_8dp"
    app:contentPaddingBottom="@dimen/dimen_4dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dimen_6dp"
    app:strokeColor="@color/colorGrey"
    app:strokeWidth="@dimen/dimen_1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProduct"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:ellipsize="end"
            android:letterSpacing="0.01"
            android:maxLines="2"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            tools:text="@string/sample_product_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProductName"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:background="@drawable/bg_redfive_rectangle_radius_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_3dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_3dp"
            android:text="@string/sample_discount"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_12sp"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecondPriceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProductName"
            android:layout_alignTop="@id/tvDiscount"
            android:layout_alignBottom="@id/tvDiscount"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_toRightOf="@id/tvDiscount"
            android:lineSpacingExtra="@dimen/text_size_6sp"
            android:paddingEnd="@dimen/dimen_8dp"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="bold"
            tools:text="@string/sample_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDiscount"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:lineSpacingExtra="@dimen/text_size_6sp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="bold"
           tools:text="@string/sample_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSellerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPriceProduct"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/text_size_8sp"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/sample_seller_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSellerName"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/text_size_8sp"
            android:maxLines="1"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/sample_city"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>